--- a/package.json
+++ b/package.json
@@ -9,15 +9,20 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@expo/metro-runtime": "~3.1.3",
+    "@expo/vector-icons": "^14.0.0",
     "expo": "^50.0.1",
     "expo-constants": "~15.4.2",
+    "expo-font": "~11.10.3",
     "expo-linking": "~6.2.1",
     "expo-router": "~3.4.1",
     "expo-splash-screen": "~0.26.1",
     "expo-status-bar": "~1.11.1",
+    "expo-web-browser": "~12.8.2",
     "nativewind": "^4.0.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-hook-form": "^7.50.1",
     "react-native": "0.73.2",
     "react-native-reanimated": "~3.6.0",
     "react-native-safe-area-context": "4.8.2",
@@ -28,6 +33,7 @@
   "devDependencies": {
     "@babel/core": "^7.20.0",
     "@types/react": "~18.2.45",
+    "prettier": "^3.2.5",
     "typescript": "^5.3.0"
   },
   "private": true
