--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@expo/metro-runtime": "~3.1.3",
     "@expo/vector-icons": "^14.0.0",
+    "@reduxjs/toolkit": "^2.2.1",
     "expo": "^50.0.1",
     "expo-constants": "~15.4.2",
     "expo-font": "~11.10.3",
@@ -28,6 +29,7 @@
     "react-native-safe-area-context": "4.8.2",
     "react-native-screens": "~3.29.0",
     "react-native-web": "~0.19.6",
+    "react-redux": "^9.1.0",
     "tailwindcss": "^3.4.0"
   },
   "devDependencies": {
