--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "react-native-reanimated": "~3.6.0",
     "react-native-safe-area-context": "4.8.2",
     "react-native-screens": "~3.29.0",
+    "react-native-sse": "^1.2.1",
     "react-native-web": "~0.19.6",
     "react-redux": "^9.1.0",
     "tailwindcss": "^3.4.0"
